@@ -189,6 +189,7 @@ extern "C" {
 #define BUF_VIDEO_CAVS		0x02620000
 #define BUF_VIDEO_VP6F		0x02630000
 #define BUF_VIDEO_THEORA_RAW	0x02640000
+#define BUF_VIDEO_VC1		0x02650000
 
 /* audio buffer types:  (please keep in sync with buffer_types.c) */
 
